k8s-main-01/media/homeassistant/resources/mosquitto.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: mqtt
    protocol: TCP
    name: mqtt
  selector:
    app.kubernetes.io/name: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
#      nodeName: nuc02
      containers:
        - name: mosquitto
          image: "eclipse-mosquitto:2.0.12"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 750m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 1024Mi
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /mosquitto/data
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: data
          nfs:
            server: 192.168.1.60
            path: /media/nate/Media12TB/services/mosquitto
        - name: mosquitto-config
          configMap:
            name: mosquitto-configmap
